# myprecious

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
migrations/: init.sql  test-values.sql
myprecious/: Auth.py  Constants.py  Db.py  GamesApi.py  Utils.py  __init__.py  __main__.py  auth.py  constants.py  db.py  encoding.py  files.py  games_api.py  games_api_test.py  utils.py  views.py
myprecious/static/: style.css
myprecious/templates/: about.html  admin.html  base.html  done.html  index.html  login.html  register.html  register_done.html  search.html  upload.html
