[tool.poetry]
name = "myprecious"
version = "0.1.0"
description = ""
authors = ["BiRabittoh <birabittoh@duck.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
flask-sqlalchemy = "^3.0.5"
flask-login = "^0.6.2"
werkzeug = "^2.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
